Do not duplicate hidden wireless networks

BUG:386342